--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,39 @@
+/* Crafted with love by wolfcreative.ru */
 @font-face{font-family:'Proxima Nova Rg';src:url(../fonts/ProximaNova-Regular.eot);src:local('../fonts/Proxima Nova Regular'),local('../fonts/ProximaNova-Regular'),url(../fonts/ProximaNova-Regular.eot?#iefix) format("embedded-opentype"),url(../fonts/ProximaNova-Regular.woff) format("woff"),url(../fonts/ProximaNova-Regular.ttf) format("truetype");font-weight:400;font-style:normal}
 @font-face{font-family:'Cirle Regular';src:url(../fonts/Circe-Regular.eot);src:local('../fonts/Circe-Regular'),local('../fonts/Circe-Regular'),url(../fonts/Circe-Regular.eot?#iefix) format("embedded-opentype"),url(../fonts/Circe-Regular.woff) format("woff"),url(../fonts/Circe-Regular.ttf) format("truetype");font-weight:400;font-style:normal}
 @font-face{font-family:'Cirle Light';src:url(../fonts/Circe-Light.eot);src:local('../fonts/Circe-Light'),local('../fonts/Circe-Light'),url(../fonts/Circe-Light.eot?#iefix) format("embedded-opentype"),url(../fonts/Circe-Light.woff) format("woff"),url(../fonts/Circe-Light.ttf) format("truetype");font-weight:400;font-style:normal}
 @font-face{font-family:'Cirle ExtraBold';src:url(../fonts/Circe-ExtraBold.eot);src:local('../fonts/Circe-ExtraBold'),local('../fonts/Circe-ExtraBold'),url(../fonts/Circe-ExtraBold.eot?#iefix) format("embedded-opentype"),url(../fonts/Circe-ExtraBold.woff) format("woff"),url(../fonts/Circe-ExtraBold.ttf) format("truetype");font-weight:400;font-style:normal}
 
-body{background:#fff}
+body{background:#fff;font-family:'Cirle Regular',sans-serif;font-size:18px;line-height:normal}
 .uk-container{max-width:1140px}
+a{font-family:'Cirle Regular',sans-serif;-webkit-transition:.3s ease-in-out;transition:.3s ease-in-out}
+a:hover,a:focus{-webkit-transition:.3s ease-in-out;transition:.3s ease-in-out}
+
+.grayhead{background:#cecece}
+.grayhead .info{background:url(../img/grayhead.jpg) no-repeat center / cover;position:relative;padding:40px 0 80px}
+.grayhead .info:before{content:'';position:absolute;z-index:1;width:100%;height:100%;left:0;right:0;top:0;right:0;background:rgba(0,0,0,.44)}
+.grayhead .info>*{position:relative;z-index:2}
+.grayhead .info h1{font:92px/110px 'Cirle ExtraBold',sans-serif;color:#fff;text-transform:uppercase;padding:0 8%;margin:60px 0 -10px}
+.grayhead .info h1 + p{font-size:30px;color:#fff}
+.grayhead .info h1 + p i.deutsch{width:42px;height:25px;display:inline-block;vertical-align:middle;background:url(../img/awesome/deutsch.jpg) no-repeat;margin:0 5px 0 6px}
+
+.grayhead .uk-navbar-container{position:relative;z-index:3}
+.grayhead .uk-navbar-nav > li > a{color:#fff;height:auto;border-bottom:1px solid rgba(255,255,255,.3);text-transform:none;font:18px/28px'Cirle Regular',sans-serif;padding:0 10px;transition:.2s ease-in-out}
+.grayhead .uk-navbar-nav > li > a:hover{background:rgba(255,255,255,.05);border-color:rgba(255,255,255,.9)}
+.grayhead .uk-navbar-nav > li:first-child > a{padding-left:0}
+.grayhead .uk-navbar-nav > li:last-child > a{padding-right:0}
+
+.advantages{height:127px;color:#051ae5;font-size:22px}
+.advantages span{line-height:26px;display:inline-block;background-image:linear-gradient(to right,#051ae5 30%,rgba(255,255,255,0) 0%);background-position:bottom;background-size:10px 1px;background-repeat:repeat-x}
+
+/* Forms */
+.form_type-1{max-width:556px;margin:0 auto;border-radius:1px;background:rgba(0,0,0,.7);padding:18px 50px 25px;box-sizing:border-box}
+.form_type-1 legend{color:#fff;line-height:22px;margin:0 -12px;display:block}
+
+/* Inputs */
+.uk-input{height:50px;border-radius:2px}
+
+/* Buttons */
+.uk-button{font:18px/50px 'Cirle Regular',sans-serif;text-transform:none;border-radius:2px}
+.uk-button-tea{color:#fff;background:#c0b83b}
+.uk-button-tea:hover,.uk-button-tea:focus{background:#a59d30}
