--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ sup{font-size:11px}
 
 .grayhead{background:#cecece}
 .grayhead .info{background:url(../img/grayhead.jpg) no-repeat center / cover;position:relative;padding:40px 0 80px}
+.grayhead h3 {color: white}
 .grayhead .info:before{content:'';position:absolute;z-index:1;width:100%;height:100%;left:0;right:0;top:0;right:0;background:rgba(0,0,0,.44)}
 .grayhead .info>*{position:relative;z-index:2}
 .grayhead .info h1{font:92px/110px 'Cirle ExtraBold',sans-serif;color:#fff;text-transform:uppercase;padding:0 8%;margin:60px 0 -10px}
